# solar-production-calc

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/solar_calc/: cli.py  plotter.py  processor.py  pvgis.py  pvgis_models.py
